# creature

./: .gitignore  Cargo.toml  README.md  eca_state.json  key.txt  layout.txt
src/: main.rs  server.rs
src/api/: gemini.rs  local_llm.rs  mod.rs  model_client.rs  openrouter.rs
src/interface/: mod.rs  widgets.rs
src/models/: constants.rs  knowledge.rs  mod.rs  plan_analysis.rs  state.rs  thought_io.rs  types.rs
src/systems/: cell.rs  colony.rs  lenia.rs  ltl.rs  mod.rs  ndarray_serde.rs  quantum.rs
src/utils/: animations.rs  ascii_art.rs  logging.rs  mod.rs
